# monitoring-proxy

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: celery_run.py  main.py  run.py
app/api/: __init__.py
app/api/v1/controllers/: alert_controller.py
app/api/v1/responses/: job_respose.py
app/domain/: exceptions.py
app/domain/registry/: interfaces.py  registry.py
app/domain/schemes/: grafana.py
app/domain/value_objects/: loki.py  notification.py
app/infrastructure/: exception_handler.py  exceptions.py  ioc.py  providers.py
app/infrastructure/adapters/: email.py  interfaces.py  loki.py  telegram.py
app/infrastructure/template_render/: interfaces.py  jinja_template_renderer.py
app/infrastructure/worker/: celery.py  tasks.py
app/services/: extractor_service.py  interfaces.py
app/settings/: settings.py
app/templates/: email_default.j2  telegram_default.j2
app/utils/: celery_logging.py  logging.py  tree.py  utils.py  version.py
